<resources>

    <string name="app_name">White snowfall Live wallpaper</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_desc">snow fall on your home screen</string>
    <string name="pref_key_amount">keyamount</string>
    <string name="pref_key_speed">keyspeed</string>
    <string name="pref_key_size">keysize</string>
    <string name="pref_key_fps">keyfps</string>
    <string name="amount_of_snow">Amount of snow</string>
    <string name="amount_desc">setup how much snow to fall</string>
    <string name="speed_of_snow">Speed of the snow</string>
    <string name="speed_desc">setup how fast the snow falls</string>
    <string name="size_of_snow">Size of snow flakes</string>
    <string name="size_desc">setup the size of the snow flakes</string>
    <string name="fps">Refresh of the screen</string>
    <string name="fps_desc">setup the interval of screen refresh</string>
    <string name="more_apps">More Apps</string>
    <string name="pref_key_more">keymore</string>
    <string name="pref_key_image">keyimage</string>
    <string name="background_image">Select background image</string>
    <string name="background_image_desc">setup an image to be shown behind the snow</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="image_cleared">The background image was cleared from this Live Wallpaper</string>
    <string name="remove">Remove Image</string>
    <string name="select">Select Image</string>
    <string name="current_image">The currently set image is: </string>
    <string name="max_size_exceeded">The image was not loaded.\nUse files with maximum size of 1.5MB.</string>
    <string name="my_eula">End User License Agreement\nThese terms and conditions apply to the Users (refered to as The User) of the Mobile Application (referred to as The Application) and the developer Emil Todorov (refered to as The Developer).\nBy copying, installation or use of The Application or any part of it, you agree to be bound by these Terms and conditions in the End User License Agreement.\n1.Usage of The Application\n(1)The Developer provides to you The User non exclusive, non transfarable, limited right to install and use The Application only for your personal needs.(2)You The User cannot use The Application in any way that can harm, deprive of rights, hold liable The Developer or harm, damage The Application or servers or networks connected with The Application, nor can you use The Application in any way which can prevent others to use The Application or servers or networks connected with The Application.(3)You The User agree that you are liable for (and The Developer is not liable to you or third parties) the use of The Application and every violation of your obligations to these Terms and Conditions (incliding any loss or damage which The Developer may suffer) from such violation.\n2. You The User agree and realise, that:\n(1)The Application contains copyrighted material which is protected by copyright laws or other applicable laws and(2)The Developer or third party hold the copyrights of The Application, it\'s contents, excluding any content made by you which can be made available through The Application. You The User agree that you are not going to, and are not going to let others copy, sell, license, distribute, make changes to, addapt, translate, make derivative works from, decompile, reverse engineer, disassemble or in any way try to take source code from The Application without the permission of The Developer.\n3.Termination\nThese terms and conditions will continue to operate until they are terminated by you The User or The Developer in the manner stated in these Terms and Conditions. You The User can terminate the operation ot these Terms and Conditions at any time by deleting completely The Application from your Mobile (or other) device. Your rights automatically and immediately are considered terminated without notice by The Developer or third parties if you should not obey any part of this Agreement. In this case you should immediately delete The Application from your device.\n4.Warranty\n(1)You The User completely realize and agree that use of The Application is entirely to your responsibility and risk, The Application is offerd AS Is, without any warranty.(2)You The User are completely liable for damage to your mobile device or other device, or loss of data, which may be connected or arrise of the use ot The Application.(3)The Developer is not liable and do not provide any warranty for the data from other sources(internet sites) presented by The Application. This data is presented AS IS without any warranty.(4)Links to other sources of information(internet sites) presented by The Application are for your convenience and The Developer present no warranty about the data presented by these sources.\n5.Indemnification\nYou The User completely realize and agree that The Developer are not liable to you in any form, for any direct, indirect, accidental, special damage or expence, which may arrise of or may be connected with the use of The Application, including loss of any data or damage to your mobile device, whether that The Developer was notified or should have been aware of the possibility of such damage.\n6.Additional regulations\n(1)These terms and conditions represent the whole contract between You The User and The Developer regarding The Application and regulates the use of The Application by You The User and completely replaces any former agreement between You The User and The Developer.(2)If The Developer chooses not to use the rights presented in this Agreement does not negate them, they can be used in any later time.(3)If a court negates a condition or part of this Agreement, the rest of the Agreement will continue to be active.</string>

</resources>