<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonImageSelect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select" />

    <Button
        android:id="@+id/buttonImageClear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove" />

    <Button
        android:id="@+id/buttonImageCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_image" />

    <TextView
        android:id="@+id/textViewCurrentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>